<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/company"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trans.company.TransCompanyActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">


    <RadioGroup
        android:id="@+id/mRadioGroup"
        android:layout_width="0dp"
        android:layout_height="63dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="496dp">

        <RadioButton
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/selector_home"
            android:gravity="center"
            android:text="@string/home"
            android:textColor="@color/selector_txt"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/supervise"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/selector_supervise"
            android:gravity="center"
            android:text="@string/supervise"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/selector_txt"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/security"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/selector_security"
            android:gravity="center"
            android:text="@string/security"
            android:textColor="@color/selector_txt"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/me"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:button="@null"
            android:drawableTop="@drawable/selector_me"
            android:gravity="center"
            android:text="@string/me"
            android:textColor="@color/selector_txt"
            android:textSize="12sp" />
    </RadioGroup>

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="71dp"
        app:layout_constraintTop_toBottomOf="@+id/mViewPager" />

    <com.trans.baselibrary.widget.NoScrollViewPager
        android:id="@+id/mViewPager"
        android:layout_width="0dp"
        android:layout_height="495dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        android:background="@color/gray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_end="71dp"
        app:layout_constraintTop_toBottomOf="@+id/mViewPager"
        tools:layout_editor_absoluteX="0dp" />


</android.support.constraint.ConstraintLayout>
